fix: column layout on small screen

--- a/assets/css/listing.css
+++ b/assets/css/listing.css
@@ -1,10 +1,10 @@
 @import "global.css";
 
-main {
+#content {
 	width: 1200px;
 	min-width: 75%;
-	flex-direction: row !important;
-	align-items: flex-start !important;
+	flex-direction: row;
+	align-items: flex-start;
 
 	h1 {
 		z-index: 1; /* Raise header so its shadow is over the listings */
@@ -129,7 +129,6 @@ main {
 
 /* Narrow screen styling */
 @media (max-width: 1200px) {
-	main { flex-direction: column; align-items: center; }
+	#content { flex-direction: column; align-items: center; }
 	#category-navigation { position: static; transform: none; }
 }
-
